@@ -1,3 +1,9 @@
+2008-10-21  Wakaba  <wakaba@suika.fam.cx>
+
+	* cvscommit.sh: Add a line to invoke |mkcommitfeed.pl|.
+
+	* mkcommitfeed.pl: New script.
+
 2008-10-05  Wakaba  <wakaba@suika.fam.cx>
 
 	* readme.en.html: Missing link to Whatpm::RDFXML module is added.
